--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,7 +78,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#CDDC39"
+                    android:background="#9C27B0"
 
                     android:clipToPadding="false"
                     android:gravity="center_horizontal|fill_horizontal"
@@ -120,7 +120,16 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <include layout="@layout/coordinate_item" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="24dp"
+                android:paddingBottom="24dp"
+                android:text="Your Coordinates"
+                android:textSize="18sp" />
+
         </LinearLayout>
     </ScrollView>
 
